# flexitext

./: flexitext.code-workspace  pyproject.toml
flexitext/: flexitext.py
flexitext/parser/: make_texts.py
