[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']
[tool.poetry]
name = "flexitext"
version = "0.1.0"
description = "Flexitext is a Python library that makes it easier to draw text with multiple styles in Matplotlib. This library is inspired and influenced by the R package [`ggtext`](https://wilkelab.org/ggtext/)."
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = ">=3.4"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mkdocstrings = "^0.25.1"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-exclude = "^1.0.2"
mkdocs-redirects = "^1.2.1"
mkdocs-section-index = "^0.3.9"
pytkdocs = {extras = ["numpy-style"], version = "^0.16.1"}
mkdocstrings-python = "^1.10.3"


[tool.poetry.group.dev.dependencies]
black = "22.3.0"
pylint = "2.10.2"
pytest-cov = "^5.0.0"
pytest = "^8.2.2"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
